[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
jsonwebtoken = "8.0"
once_cell = "1.8"
warp = "0.3.3"
cargo-watch = "8.4.0"

[dev-dependencies]
axum-sqlx-tx = "0.5.0"

[features]
all-databases = ["any", "mssql", "mysql", "postgres", "sqlite"]
any = ["sqlx/any"]
mssql = ["sqlx/mssql"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
